# simple_font_generator

./: .clang-tidy  .gitignore  A.txt  CMakeLists.txt  input.txt  log_duration.h  main.cpp
